[tool.poetry]
name = "pccs-analysis"
version = "0.1.0"
description = ""
authors = ["Yutaro Omote"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
rdkit-pypi = "^2021.3.3"
# torch = "1.7.0"
# fairseq = "0.10.2"
ipython = "^7.25.0"
Jinja2 = "^3.0.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.19"
python-lsp-server = "^1.1.0"
black = "^21.6b0"
isort = "^5.9.2"
ipdb = "^0.13.9"
pygments-style-dracula = "^1.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"